...
  "autoScrollOn": "پیمایش خودکار روشن",

  "note": "یادداشت",
  "noteHint": "یادداشت شما برای این بیت",
  "lineNotRead": "در این خوانش این خط خوانده نشده است",
  "bookmark": "نشان‌گذاری",
  "findInPoem": "جستجو در شعر",
  "meanings": "معنی ابیات",
  "zoomIn": "بزرگ‌نمایی",
  "zoomOut": "کوچک‌نمایی",
  "switchTheme": "تغییر پوسته",
  "copyPoem": "رونوشت شعر",
  "share": "هم‌رسانی",
  "findInThisPoem": "جستجو در این شعر",
...
