...
    'سیزدهم': 13,
    'چهاردهم': 14,
    'پانزدهم': 15,
  };

  static const _genres = {
    'غزلیات': 'Ghazals',
    'غزل': 'Ghazal',
    'رباعیات': 'Quatrains',
    'رباعی': 'Quatrain',
    'قصاید': 'Qasidas',
    'قصائد': 'Qasidas',
    'قصیده': 'Qasida',
...
